Try to add flags